# MLNN2025

./: README.md  ejercicio_clase 1_intencion compra.html  ejercicio_clase_revenue.html  pyproject.toml
data/: df_trabajo_sesiones.csv
notebooks/: taller_boosting.ipynb
